--- a/lacosRepeticao_17jan2024.ipynb
+++ b/lacosRepeticao_17jan2024.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPHiJ0PNf29NDsbBM2mcWc",
+      "authorship_tag": "ABX9TyMMA0TwynpqmepmCEnDx7yX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,23 +75,22 @@
       "cell_type": "code",
       "source": [
         "i = 0\n",
-        "while (i <= 21):\n",
+        "while (i <= 20):\n",
         "  if (i == 13):\n",
-        "    i += i\n",
+        "    i = i + 1\n",
         "    continue\n",
-        "  if (i == 20):\n",
-        "    break\n",
-        "  print(\"Andar = \", i)\n",
-        "  i = i + 1"
+        "  else:\n",
+        "    print(\"Andar = \", i)\n",
+        "    i = i + 1"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ahMRz-E4IP3I",
-        "outputId": "c9423b7d-d5b1-4933-9b3b-2530db57687c"
+        "outputId": "0c10b696-5309-4322-8439-43934e2081b3"
       },
-      "execution_count": 2,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +108,14 @@
             "Andar =  9\n",
             "Andar =  10\n",
             "Andar =  11\n",
-            "Andar =  12\n"
+            "Andar =  12\n",
+            "Andar =  14\n",
+            "Andar =  15\n",
+            "Andar =  16\n",
+            "Andar =  17\n",
+            "Andar =  18\n",
+            "Andar =  19\n",
+            "Andar =  20\n"
           ]
         }
       ]
